# spot-lyric

./: .gitignore  install-deb.sh  run.sh
.cursor/: settings.json
docs/plans/: backend-integration.md  frontend-ui-design.md
spot-lyric-daemon/: Cargo.toml
spot-lyric-daemon/data/: cn.spotlyric.Daemon.service.in
spot-lyric-daemon/src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs
spot-lyric-daemon/src/dbus/: app_iface.rs  auth_iface.rs  lyrics_iface.rs  mod.rs  playback_iface.rs  server.rs
spot-lyric-daemon/src/domain/: lyrics_domain.rs  mod.rs  playback_domain.rs
spot-lyric-daemon/src/lyrics_external/: mod.rs  netease.rs  qq.rs
spot-lyric-daemon/src/playback_sources/: mpris.rs
spot-lyric-daemon/src/spotify/: auth_service.rs  connect_state.rs  discovery.rs  lyrics_api.rs  mod.rs  transport.rs
spot-lyric-daemon/src/storage/: cookie_store.rs  database.rs  device_store.rs  lyrics_store.rs  mod.rs  playback_store.rs
spot-lyric-daemon/src/types/: auth.rs  library.rs  lyrics.rs  mod.rs  playback.rs
spot-lyric-daemon/src/util/: convert.rs  mod.rs  spotify.rs  track_match.rs
spot-lyric-gtk/: .gitignore  Cargo.toml  build.rs
spot-lyric-gtk/data/: cn.spotlyric.Gtk.desktop  cn.spotlyric.Gtk.gschema.xml
spot-lyric-gtk/resources/: resources.gresource.xml  style.css
spot-lyric-gtk/src/: application.rs  backend_runtime.rs  config.rs  daemon_launcher.rs  main.rs
spot-lyric-gtk/src/bridge/: commands.rs  controller.rs  mod.rs  updates.rs
spot-lyric-gtk/src/dbus/: client.rs  mod.rs  types.rs
spot-lyric-gtk/src/dialogs/: auth_dialog.rs  lyrics_match_dialog.rs  mod.rs
spot-lyric-gtk/src/platform/: mod.rs  x11.rs
spot-lyric-gtk/src/tray/: mod.rs  status_notifier.rs
spot-lyric-gtk/src/utils/: mod.rs  position_clock.rs
spot-lyric-gtk/src/widgets/: desktop_lyrics_window.rs  full_lyrics_window.rs  lyrics_preview_page.rs  mod.rs  preferences_window.rs
spot-lyric-gtk/src/widgets/full_lyrics_window/: layout.rs  positioning.rs  rows.rs  sync.rs  ui.rs
