[package]
name = "spot-lyric-daemon"
version = "0.1.2"
edition = "2021"
rust-version = "1.80"
description = "In-process backend library for Spot-Lyric GTK"
license = "MIT"

[dependencies]
zbus = { version = "5", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "sync", "fs"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
futures-util = "0.3"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
base64 = "0.22"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
async-trait = "0.1"
hmac = "0.12"
sha1 = "0.10"
aes = "0.8"
cbc = "0.1"
num-bigint = "0.4"
rand = "0.8"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
