[package]
name = "spot-lyric-gtk"
version = "0.1.2"
edition = "2021"
rust-version = "1.80"
description = "Desktop lyrics overlay for Spotify with an in-process backend"
license = "MIT"

[dependencies]
spot-lyric-daemon = { path = "../spot-lyric-daemon" }
gtk         = { package = "gtk4", version = "0.9", features = ["v4_14"] }
adw         = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
glib        = "0.20"
gio         = "0.20"
gdk4        = "0.9"
gdk4-x11    = "0.9"
cairo-rs    = { package = "cairo-rs", version = "0.20", features = ["v1_16"] }
zbus        = { version = "5", features = ["tokio"] }
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell   = "1"
futures-util = "0.3"
ksni        = "0.2"
x11rb       = { version = "0.13", features = ["allow-unsafe-code", "shape", "randr"] }
anyhow      = "1"

[build-dependencies]
glib-build-tools = "0.20"
